maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:21: error: not found: value u
            setIndication(u,j-1,cpt)
                          ^