maze.shortestpath.ShortestPathMaze.scala.code
var x = 0
var y = 0
var cpt=0
override def run() {
  for(i<-0 to getMondeLargeur-1){
    for(j<-0 to getMondeHauteur-1){
      if(aBiscuit(i,j)){
        x=i
        y=j
      }
    }
  }
  setIndication(x,y,cpt)
  while(true){
    cpt+=1
    for(i<-0 to getMondeLargeur-1){
    	for(j<-0 to getMondeHauteur-1){
        if (getIndication(i,j)==cpt){
    			if(!aMurNord(i,j) && getIndication(i,j-1)==9999){
    				setIndication(u,j-1,cpt)
    			}
    			if(!aMurOuest(i,j) && getIndication(i-1,j)==9999){
    				setIndication(i-1,j,cpt)
    			}
    			if(!aMurNord(i,j+1) && getIndication(i,j+1)==9999 && y!=getMondeLargeur-1){
    				setIndication(x,y+1,cpt)
    			}
    			if(!aMurOuest(i+1,j) && getIndication(i+1,j)==9999 && x!=getMondeLargeur -1){
    				setIndication(i+1,j,cpt)
    			}
        }
      }
    }
	}
}